tree-sitter-animatix/test/corpus/control_flow.txt
==================
If statement
==================

if condition {
  title.text = "Yes"
}

---

(source_file
  (if_expression
    condition: (identifier)
    consequence: (block
      (property_assignment
        target: (path_expression
          base: (identifier)
          name: (identifier))
        value: (string)))))

==================
If else statement
==================

if condition {
  title.text = "Yes"
} else {
  title.text = "No"
}

---

(source_file
  (if_expression
    condition: (identifier)
    consequence: (block
      (property_assignment
        target: (path_expression
          base: (identifier)
          name: (identifier))
        value: (string)))
    alternative: (block
      (property_assignment
        target: (path_expression
          base: (identifier)
          name: (identifier))
        value: (string)))))

==================
For loop
==================

for i in {0, 1, 2, 3, 4} {
  let x = i
}

---

(source_file
  (for_block
    variable: (identifier)
    iterable: (set_expression
      (number)
      (number)
      (number)
      (number)
      (number))
    (block
      (let_declaration
        name: (identifier)
        value: (identifier)))))

==================
Sequence block
==================

sequence {
  a.color = accent.danger
  b.color = accent.warning
}

---

(source_file
  (sequence_block
    (block
      (property_assignment
        target: (path_expression
          base: (identifier)
          name: (identifier))
        value: (path_expression
          base: (identifier)
          name: (identifier)))
      (property_assignment
        target: (path_expression
          base: (identifier)
          name: (identifier))
        value: (path_expression
          base: (identifier)
          name: (identifier))))))

==================
Stagger block
==================

stagger [80ms] {
  fade-in a [400ms]
  fade-in b [400ms]
}

---

(source_file
  (stagger_block
    (time_literal)
    (block
      (action_invocation
        verb: (identifier)
        targets: (target_list
          (identifier))
        (modifier_block
          (modifier_list
            (modifier
              (time_literal)))))
      (action_invocation
        verb: (identifier)
        targets: (target_list
          (identifier))
        (modifier_block
          (modifier_list
            (modifier
              (time_literal))))))))

==================
Always block
==================

always {
  let cx = scene.center.x
  orbit.at = (cx, cy)
}

---

(source_file
  (always_block
    (block
      (let_declaration
        name: (identifier)
        value: (path_expression
          base: (path_expression
            base: (identifier)
            name: (identifier))
          name: (identifier)))
      (property_assignment
        target: (path_expression
          base: (identifier)
          name: (identifier))
        value: (tuple_expression
          (identifier)
          (identifier))))))

==================
For loop with index variable
==================

for item, i in items {
  let x = i
}

---

(source_file
  (for_block
    variable: (identifier)
    index_variable: (identifier)
    iterable: (identifier)
    (block
      (let_declaration
        name: (identifier)
        value: (identifier)))))

==================
For loop with tuple destructuring
==================

for (x, y) in points {
  let px = x
}

---

(source_file
  (for_block
    variable: (identifier)
    variable: (identifier)
    iterable: (identifier)
    (block
      (let_declaration
        name: (identifier)
        value: (identifier)))))

==================
Inline items newline separated
==================

row: Row {
  @header {
    lbl: Text
    icon: Icon
  }
}

---

(source_file
  (actor_declaration
    label: (identifier)
    type: (identifier)
    (children_block
      (inline_items
        (inline_item
          (inline_slot_fill
            name: (identifier)
            (children_block
              (inline_items
                (inline_item
                  (inline_actor_declaration
                    label: (identifier)
                    type: (identifier)))
                (inline_item
                  (inline_actor_declaration
                    label: (identifier)
                    type: (identifier)))))))))))

==================
Comments in blocks
==================

always {
  // This is a comment
  let x = 1
}

---

(source_file
  (always_block
    (block
      (comment)
      (let_declaration
        name: (identifier)
        value: (number)))))

==================
Match statement
==================

match v {
  0 => {
    a.color = red
  },
  _ => {
    a.color = blue
  }
}

---

(source_file
  (match_expression
    scrutinee: (identifier)
    (match_arm
      pattern: (match_pattern
        (match_literal
          (match_num)))
      value: (block
        (property_assignment
          target: (path_expression
            base: (identifier)
            name: (identifier))
          value: (identifier))))
    (match_arm
      pattern: (match_pattern
        (match_wildcard))
      value: (block
        (property_assignment
          target: (path_expression
            base: (identifier)
            name: (identifier))
          value: (identifier))))))

==================
Match statement with range
==================

match n {
  1..=3 => {
    a.color = green
  },
  _ => {}
}

---

(source_file
  (match_expression
    scrutinee: (identifier)
    (match_arm
      pattern: (match_pattern
        (match_range
          low: (match_num)
          high: (match_num)))
      value: (block
        (property_assignment
          target: (path_expression
            base: (identifier)
            name: (identifier))
          value: (identifier))))
    (match_arm
      pattern: (match_pattern
        (match_wildcard))
      value: (set_expression))))
