tree-sitter-animatix/test/corpus/expressions.txt
==================
Number literal
==================

let x = 42

---

(source_file
  (let_declaration
    name: (identifier)
    value: (number)))

==================
Float literal
==================

let x = 3.14

---

(source_file
  (let_declaration
    name: (identifier)
    value: (number)))

==================
Percentage literal
==================

let x = 50%

---

(source_file
  (let_declaration
    name: (identifier)
    value: (percentage
      (number))))

==================
Time literal
==================

let x = 2s

---

(source_file
  (let_declaration
    name: (identifier)
    value: (time_literal)))

==================
Time literal milliseconds
==================

let x = 500ms

---

(source_file
  (let_declaration
    name: (identifier)
    value: (time_literal)))

==================
String literal double quotes
==================

let x = "hello world"

---

(source_file
  (let_declaration
    name: (identifier)
    value: (string)))

==================
String literal single quotes
==================

let x = 'hello world'

---

(source_file
  (let_declaration
    name: (identifier)
    value: (string)))

==================
Boolean true
==================

let x = true

---

(source_file
  (let_declaration
    name: (identifier)
    value: (boolean)))

==================
Boolean false
==================

let x = false

---

(source_file
  (let_declaration
    name: (identifier)
    value: (boolean)))

==================
Null literal
==================

let x = null

---

(source_file
  (let_declaration
    name: (identifier)
    value: (null_literal)))

==================
Tuple expression
==================

let x = (100, 200)

---

(source_file
  (let_declaration
    name: (identifier)
    value: (tuple_expression
      (number)
      (number))))

==================
Array expression
==================

let x = [1, 2, 3]

---

(source_file
  (let_declaration
    name: (identifier)
    value: (array_expression
      (number)
      (number)
      (number))))

==================
Set expression
==================

let x = {1, 2, 3}

---

(source_file
  (let_declaration
    name: (identifier)
    value: (set_expression
      (number)
      (number)
      (number))))

==================
Path expression
==================

let x = scene.center.x

---

(source_file
  (let_declaration
    name: (identifier)
    value: (path_expression
      base: (path_expression
        base: (identifier)
        name: (identifier))
      name: (identifier))))

==================
Call expression
==================

let x = rgb(255, 0, 0)

---

(source_file
  (let_declaration
    name: (identifier)
    value: (call_expression
      function: (identifier)
      (argument_list
        (number)
        (number)
        (number)))))

==================
Method call expression
==================

let x = text.split(",")

---

(source_file
  (let_declaration
    name: (identifier)
    value: (method_call_expression
      object: (identifier)
      method: (identifier)
      (argument_list
        (string)))))

==================
Index expression
==================

let x = items[0]

---

(source_file
  (let_declaration
    name: (identifier)
    value: (index_expression
      object: (identifier)
      index: (index_value
        (number)))))

==================
Unary negation
==================

let x = -42

---

(source_file
  (let_declaration
    name: (identifier)
    value: (unary_expression
      operand: (number))))

==================
Unary not
==================

let x = !true

---

(source_file
  (let_declaration
    name: (identifier)
    value: (unary_expression
      operand: (boolean))))

==================
Binary addition
==================

let x = a + b

---

(source_file
  (let_declaration
    name: (identifier)
    value: (binary_expression
      (identifier)
      (identifier))))

==================
Binary multiplication precedence
==================

let x = a + b * c

---

(source_file
  (let_declaration
    name: (identifier)
    value: (binary_expression
      (identifier)
      (binary_expression
        (identifier)
        (identifier)))))

==================
Parenthesized expression
==================

let x = (a + b)

---

(source_file
  (let_declaration
    name: (identifier)
    value: (tuple_expression
      (binary_expression
        (identifier)
        (identifier)))))

==================
Closure expression single param no parens
==================

let f = x => x + 1

---

(source_file
  (let_declaration
    name: (identifier)
    value: (closure_expression
      param: (identifier)
      (binary_expression
        (identifier)
        (number)))))

==================
Closure expression
==================

let f = (x) => x^2

---

(source_file
  (let_declaration
    name: (identifier)
    value: (closure_expression
      (identifier)
      (binary_expression
        (identifier)
        (number)))))

==================
Object expression
==================

let p = Point { x: 10, y: 20 }

---

(source_file
  (let_declaration
    name: (identifier)
    value: (object_expression
      type: (identifier)
      (property_list
        (property
          name: (identifier)
          value: (number))
        (property
          name: (identifier)
          value: (number))))))

==================
Object expression with dotted property
==================

let p = Point { x: 10, scene.background: (0.2, 0.2, 0.3) }

---

(source_file
  (let_declaration
    name: (identifier)
    value: (object_expression
      type: (identifier)
      (property_list
        (property
          name: (identifier)
          value: (number))
        (property
          name: (path_expression
            base: (identifier)
            name: (identifier))
          value: (tuple_expression (number) (number) (number)))))))

==================
If expression
==================

let x = if true { 1 } else { 2 }

---

(source_file
  (let_declaration
    name: (identifier)
    value: (if_expression
      condition: (boolean)
      consequence: (expression_block
        (number))
      alternative: (expression_block
        (number)))))
