tree-sitter-animatix/test/corpus/keyframes.txt
==================
Absolute keyframe seconds
==================

#0.5s
fade-in hello [800ms]

---

(source_file
  (keyframe
    (time_literal))
  (action_invocation
    verb: (identifier)
    targets: (target_list
      (identifier))
    (modifier_block
      (modifier_list
        (modifier
          (time_literal))))))

==================
Absolute keyframe milliseconds
==================

#500ms
fade-in hello [800ms]

---

(source_file
  (keyframe
    (time_literal))
  (action_invocation
    verb: (identifier)
    targets: (target_list
      (identifier))
    (modifier_block
      (modifier_list
        (modifier
          (time_literal))))))

==================
Relative keyframe
==================

#+0.3s
fade-in world [400ms]

---

(source_file
  (keyframe
    (time_literal))
  (action_invocation
    verb: (identifier)
    targets: (target_list
      (identifier))
    (modifier_block
      (modifier_list
        (modifier
          (time_literal))))))

==================
Scene declaration
==================

# Intro

---

(source_file
  (scene_declaration
    name: (identifier)))

==================
Multiple scenes
==================

# Intro
title: Text, content: "Hello"

# Diagram
graph: Graph, size: (500, 500)

---

(source_file
  (scene_declaration
    name: (identifier))
  (actor_declaration
    label: (identifier)
    type: (identifier)
    (property_list
      (property
        name: (identifier)
        value: (string))))
  (scene_declaration
    name: (identifier))
  (actor_declaration
    label: (identifier)
    type: (identifier)
    (property_list
      (property
        name: (identifier)
        value: (tuple_expression
          (number)
          (number))))))

==================
Play statement
==================

play Diagram [fade, 300ms]

---

(source_file
  (play_statement
    scene: (identifier)
    (modifier_block
      (modifier_list
        (modifier
          (identifier))
        (modifier
          (time_literal))))))
